# sdlc-mcp

./: CLAUDE.md  README.md  pyproject.toml
docs/: design.md
examples/: config.yml
src/sdlc_mcp/: __main__.py  config.py  merge.py  repo.py  server.py
tests/: test_server.py  test_stdio.py
