[project]
name = "sdlc-context"
version = "0.1.0"
description = "MCP server that serves hierarchical organizational context to AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
sdlc-context = "sdlc_context.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdlc_context"]

[tool.ruff]
line-length = 100
target-version = "py311"
