[project]
name = "sdlc-mcp"
dynamic = ["version"]
description = "MCP server that serves hierarchical organizational context to AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
sdlc-mcp = "sdlc_mcp.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "calver-by-date"

[tool.ruff]
line-length = 100
target-version = "py311"
